--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 }
-
 .img-container{
 
    height: 100vh; 
@@ -11,11 +11,8 @@
    background-repeat: no-repeat;
    background-position: top left,bottom right;
    background-size: 200px;
-
 }
-
 .container{
-    
     display: flex;
     justify-content: center; 
     align-items: center;
@@ -56,35 +53,41 @@ input::placeholder{
 }
 
 .list{
-    margin-top: 4rem;
-}
-.list ul {
-    list-style: none;
-  
+    margin-top: 4rem;     
 }
 
-.list ul li {
-    font-size: 1.5rem;
+.listitem{
     border-bottom: 2px solid #5E7F4C;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
     min-width: 500px;
+}
+
+
+.listvalue {
+    font-size: 1.5rem;
     color: #627f52;
     padding-bottom: .5rem;
+    text-transform: capitalize;
+    /* margin-bottom: 1rem; */
 
 } 
-li::before {
+.listvalue::before {
     content: "• "; 
     color: #5E7F4C;
     font-size: 2rem;
-    margin-left: -.5em;
+    margin-left: -.1em;
 }
-
-li::after {
-    content: "X"; 
+.crosBtn {
     color: white;
     background-color: #5E7F4C;
     font-size: 1rem;
-    margin-left: 450px;
+    border: none;
+    /* margin-left: 400px; */
     padding: .25rem .5rem;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 5px;
+    cursor: pointer;
 }
