--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
     
 }
 .img-container{
-
-   height: 100vh; 
+   height: 100%;
+   min-height: 100vh; 
    background-image: url(./img/top.png),url(./img/bottom.jpg);
    background-repeat: no-repeat;
    background-position: top left,bottom right;
@@ -85,9 +85,59 @@ input::placeholder{
     background-color: #5E7F4C;
     font-size: 1rem;
     border: none;
-    /* margin-left: 400px; */
     padding: .25rem .5rem;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 5px;
     cursor: pointer;
 }
+
+@media (max-width:426px) {
+    .img-container{
+        background-size: 150px;
+    }
+    .container{
+        margin: 1rem;
+    }
+    .title{ 
+        font-size: 40px;
+
+    }
+
+    input{
+        padding: 0.5rem 2rem;
+    }
+    .addbtn{
+        font-size: 1rem;
+    }
+    .list{
+        margin: 2rem;     
+    }
+    .listitem{
+        min-width: 300px;
+    }
+    .listvalue {
+       font-size: 1rem;
+    
+    } 
+    
+    
+}
+
+@media (max-width:376px) {
+   
+
+    input{
+        padding: 0.5rem;
+    }
+   
+    .listitem{
+        min-width: 270px;
+    }
+    .listvalue {
+       font-size: 1.3rem;
+    
+    } 
+    
+    
+}
+
